# rv-verge

./: .gitignore  BACKUP_RESTORE_FAQ.md  BUILD_ISSUES.md  BUILD_OPTIMIZATION_ANALYSIS.md  BUILD_RESULTS.md  CEDARX_RESEARCH.md  CEDARX_RESEARCH_RESULTS.md  CI_CONFIG.md  CI_GUIDE.md  DISPLAY_FIX_SUMMARY.md  DISPLAY_RESOLUTION_FIX.md  DRM_G2D_RESEARCH.md  FBTURBO_G2D_FINDINGS.md  FBTURBO_RESEARCH_SUMMARY.md  FBTURBO_RETEST_RESULTS.md  FBTURBO_TEST_FINAL_RESULTS.md  FEATURE_MIGRATION_PLAN.md  FIXES_APPLIED.md  G2D_ACCESS_RESEARCH.md  GRAPHICS_ACCELERATION_RESEARCH.md  LATEST_FIXES.md  MONITORING.md  NODEJS22_FIX.md  NODEJS_FIX.md  QUICK_BACKUP_64GB_TO_32GB.md  QUICK_FIX_GRAPHICS.md  README.md  RUNTIME_ISSUES.md  SD_CARD_BACKUP_GUIDE.md  STAGE3_OPTIMIZATION.md  STARTUP_DEBUG.md  STATUS.md  SYSTEM_OPTIMIZATIONS.md  add_ssh_key.sh  add_ssh_key_one_line.sh  add_ssh_key_root.sh  add_ssh_key_root_one_line.sh  backup-sd-card-minimal.sh  backup-sd-card-smart.sh  check-ssh-fedora.sh  (+37 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: desktop-capability.json
src-tauri/icons/: README.md  icon.icns
src-tauri/locales/: de.yml  es.yml  id.yml  jp.yml  ko.yml  ru.yml  tr.yml  tt.yml  zh.yml  zhtw.yml
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/cmd/: app.rs  clash.rs  system.rs
src-tauri/src/config/: clash.rs  config.rs  profiles.rs  verge.rs
src-tauri/src/core/: backup.rs  service.rs
src-tauri/src/utils/: autostart.rs  debug_startup.rs  dirs.rs  init.rs  (+5 more)
(+83 files in other folders)
